# physher

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Datasets.md  Details.md  Inputfile.md  Install.md  ProjectHome.md  README.md  dev.Dockerfile  makefile  makefile.debug  makefile.openmp  makefile.pthread  makefile.sse3  makefile.sse3.openmp  makefile.sse3.pthread  mcmc.c  mcmc.h  phyc-config.cmake
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  benchmarking.c
examples/fluA/: GTR-G4-ML.json  HKY-MCMC.json  JC69-ML-NNI.json  JC69-ML.json  JC69-time-ELBO.json  README.md  checkpoint.jon  fluA-discreteclock.config  fluA-localclock.config  fluA-rooted.nxs
examples/fluB/: fluB-rooted.nxs  fluB.config  fluB.fa
python/: setup.cfg
python/physhpy/cli/: advi.py  cli.py  evolution.py  mcmc.py  optimize.py  utils.py
src/: bootstrap.c  gamvi.c  gamvi.h  modelAveraging.c  physher.c  simultron.c
src/phyc/: K80.c  K80.h  PhyCConfig.h.in  args.c  args.h  asr.c  asr.h  beta.c  beta.h  bfgs.c  bfgs.h  boot.c  boot.h  bound.c  bound.h  boundfactory.c  boundfactory.h  bracket.c  bracket.h  branchmodel.c  branchmodel.h  brent.c  brent.h  bridge.c  bridge.h  calculator.c  calculator.h  cat.c  cat.h  checkpoint.c  checkpoint.h  chisq.c  chisq.h  classification.c  classification.h  combinatorics.c  combinatorics.h  compoundmodel.c  compoundmodel.h  cpo.c  (+311 more)
src/phycpp/: physher.cpp  physher.hpp
tests/: CMakeLists.txt  dbg.h  minunit.h  test_clone.c  test_coalescent.c  test_distributions.c  test_priors.c  test_simplex.c  test_transforms.c  test_tree.c  test_tree_likelihood.c
tests/data/: distributions.json  f81.json  gtr-bayesian.json  gtr-c2-priors.json  hky.json  jc69-time.json  jc69-vb-blocks.json  jc69-vb.json  jc69.json  tiny.fa
