[metadata]
name = physhpy
version = 1.0.0
url = https://github.com/4ment/physher
author = Mathieu Fourment
author_email = mathieu.fourment@uts.edu.au
keywords = phylogenetics, variational, Bayes, likelihood
description = Command line interface for physher
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =.
install_requires =
    dendropy
    numpy>=1.7

[options.entry_points]
console_scripts =
    physhpy = physhpy.cli.cli:main

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
test =
    pytest

[flake8]
max-line-length = 88
ignore = E203, W503